# sift-sc

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: lint.yml  test.yml
docs/: Makefile  conf.py  index.rst  installation.rst  references.bib  tutorial_kernels.ipynb  tutorial_pipeline.ipynb  tutorial_sifter.ipynb
docs/api/: index.rst
sift/: __init__.py  _backend_utils.py  _constants.py  _sift.py  _types.py  _utils.py  kernels.py
tests/: conftest.py  test_pipeline.py
