[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"

[tool.poetry]
authors = ["Zoe Piran <zoe.piran@mail.huji.ac.il>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description = "Biological signal filtering in single-cell data."
documentation = "https://sift-sc.readthedocs.io/"
homepage = "https://github.com/nitzanlab/sift-sc"
license = "BSD-3-Clause"
name = "sift-sc"
packages = [
  {include = "sift"},
]
readme = "README.rst"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.15"
scipy = ">=1.5.0"
pykeops = ">=2.0"
pandas = ">=1.3"
anndata = ">=0.8"
scanpy = ">=1.7"
matplotlib = ">=3.3"
seaborn = ">=0.10"
rich = ">=10"
# gpu
torch = {version = ">=1.8.0", optional = true}
# dev
pre-commit = {version = ">=2.10", optional = true}
# docs
sphinx = {version = ">=4", optional = true}
furo = {version = ">=2022.04.07", optional = true}
nbsphinx = {version = ">=0.8", optional = true}
ipython = {version = ">=7", optional = true}
sphinx-autodoc-typehints = {version = ">=1.12", optional = true}
sphinxcontrib-bibtex = {version = ">=2", optional = true}
# test
pytest = {version = ">=7", optional = true}

[tool.poetry.extras]
gpu = ["torch"]
dev = ["pre-commit"]
docs = [
  "sphinx",
  "furo",
  "nbsphinx",
  "sphinx-autodoc-typehints",
]
test = ["pytest"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
